--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-body {
+html {
+  scroll-behavior: smooth;
   background-color: #18181b;
 }
 
