--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: #18181b;
+  background-color: hsl(240, 6%, 10%);
   font-family: Inter, sans-serif;
 }
 
