--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @import 'tailwindcss/utilities';
 
 html {
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   background-color: hsl(240, 6%, 10%);
   font-family: Inter, sans-serif;
 }
